--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
@@ -10,7 +10,7 @@
         .sidebar {
             position: fixed;
             width: 220px;
-            border: 1px solid black;
+            border: 1px solid #333333;
             overflow: auto;
             padding:0px 5px;
             height:220px;
@@ -28,13 +28,13 @@
 
         .sidebar.left {
             left:0px;
-            top: 60px;
+            top: 59px;
             height: calc(100% - 60px);
         }
 
         .sidebar.right {
             right:0px;
-            top: 60px;
+            top: 59px;
             height: calc(100% - 60px);
         }
 
