--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor-form.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor-form.html
@@ -9,6 +9,7 @@
     <style>
       .editablesContainer {
         display: flex;
+        font-family: 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
       }
 
       .editableGroup {
@@ -90,6 +91,7 @@
       h4 {
         margin: 0;
         display: inline;
+        font-weight:normal;
       }
 
       .toolbar-item {
@@ -186,7 +188,7 @@
       }
 
       .toolbar-label {
-        font-size: 10px;
+        font-size: 11px;
         text-align: center;
         display:block;
       }
