--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor-form.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor-form.html
@@ -22,6 +22,10 @@
         white-space: nowrap;
       }
 
+        juicy-popover label.editable {
+            color: black;
+        }
+
       .val {
         display: inline-block;
         width: 50px;
