Juicy/juicy-tile-list@0.1.1
Juicy/juicy-tile-list@0.1.1

--- a/src/Launcher/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
@@ -567,6 +567,7 @@ version: 0.1.0
                 if(child.background !== undefined) {
                   elementStyle.backgroundColor = child.background || "transparent";
                 }
+                elementStyle.border = child.border;
               }
               
               if(child.items){// virtual container
