Clear border/background styles
Juicy/juicy-tile-grid@43557c22803f0bde8b9f90e09973d2af785455be
Juicy/juicy-tile-list@2b3b539976f201ed3291f3300003034e079de36b
Juicy/juicy-tile-setup-sync@01fa7d9bce34792fbe93c968de62d6ea3191c025
https://github.com/Polyjuice/Polyjuice/issues/59

--- a/src/Launcher/wwwroot/sys/juicy-tile-grid/src/juicy-tile-grid.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-grid/src/juicy-tile-grid.html
@@ -155,10 +155,12 @@ version: 0.1.0
                             elementStyle.width = child.widthAdaptive || child.widthDynamic ? "100%" : child.width + "px";
                             // elementStyle.height = ( child.height /*+ 2 * oversize*/ ) + "px";
                             elementStyle.height = child.heightAdaptive || child.heightDynamic ? "100%" : child.height + "px";
-                            if(child.background !== undefined) {
-                            elementStyle.backgroundColor = child.background || "transparent";
+                            if (child.background !== undefined) {
+                                elementStyle.backgroundColor = child.background || "transparent";
+                            } else {
+                                elementStyle.backgroundColor = "";
                             }
-                            elementStyle.border = child.border;
+                            elementStyle.border = child.border || "";
                         }
 
                         if(child.items){// virtual container
