--- a/src/Launcher/wwwroot/Launcher/elements/launcher-hot-key/launcher-hot-key.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-hot-key/launcher-hot-key.html
@@ -14,17 +14,20 @@
                 var keys = this.keys.split(" ");
                 var that = this;
 
-                document.addEventListener("keyup", function (e) {
+                document.addEventListener("keydown", function (e) {
+                    console.log("Key: " + e.which);
+
                     for (var i = 0; i < keys.length; i++) {
                         if (that.isMatch(e, keys[i])) {
-                            that.fire("keyup", e);
+                            e.preventDefault();
+                            that.fire("keypress", e);
                             return;
                         }
                     }
                 });
             },
             isMatch: function (e, key) {
-                var keys = key.split("+");
+                var keys = key.split(/[+]/gi);
                 var match = true;
                 var ch = String.fromCharCode(e.which).toLowerCase();
 
