--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
@@ -7,6 +7,21 @@
 <polymer-element name="juicy-tile-editor" attributes="selectionMode">
   <template>
     <style>
+        juicy-tile-editor-form {
+            display: block;
+            padding: 10px;
+            background-color: #252526;
+            color: #FFF;
+            left: 0px;
+            top: 0px;
+            height: 60px;
+            width: 100%;
+            position: fixed;
+            z-index: 10;
+            border-bottom: 1px solid #333333;
+            box-sizing: border-box;
+        }
+
         .sidebar {
             position: fixed;
             width: 220px;
@@ -90,6 +105,10 @@
 
         .sidebar /deep/ #menu {
             margin-left: 10px;
+        }
+
+        .sidebar /deep/ .visibility {
+            background-color: #252526;
         }
 
         .sidebar h1 {
