--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
@@ -27,7 +27,6 @@
             width: 220px;
             border: 1px solid #333333;
             overflow: auto;
-            padding:0px 5px;
             height:220px;
             background-color:#252526;
             color:#FFF;
@@ -38,6 +37,7 @@
 
         .sidebar h1 {
             cursor: move;
+            padding: 0 5px;
         }
 
         :host.max-height .sidebar {
