Replace border with outline
Juicy/juicy-tile-editor@fbd6e032cd065c5debfd85db4e9ca8335cc655ae
Juicy/juicy-tile-grid@ed8ee36d959e4c538956cb33dc91731aede0eda4
Juicy/juicy-tile-list@4db187eef6369402f0629479d37e383fde1688cc

https://github.com/Polyjuice/Polyjuice/issues/60

--- a/src/Launcher/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
@@ -571,7 +571,7 @@ version: 0.1.0
                 } else {
                     elementStyle.backgroundColor = "";
                 }
-                elementStyle.border = child.border || "";
+                elementStyle.outline = child.outline || "";
               }
               
               if(child.items){// virtual container
