--- a/src/Launcher/wwwroot/sys/juicy-tile-grid/src/juicy-tile-grid.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-grid/src/juicy-tile-grid.html
@@ -160,7 +160,7 @@ version: 0.1.0
                             } else {
                                 elementStyle.backgroundColor = "";
                             }
-                            elementStyle.border = child.border || "";
+                            elementStyle.outline = child.outline || "";
                         }
 
                         if(child.items){// virtual container
