--- a/src/Launcher/wwwroot/Launcher/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/LauncherTemplate.html
@@ -35,12 +35,7 @@
 </head>
 <body is="launcher-main">
     <template id="root" bind>
-        <launcher-hot-key keys="Ctrl+E" onkeypress="getModel(this).editingMode$ = !getModel(this).editingMode$"></launcher-hot-key>
-        <launcher-hot-key keys="Esc" onkeypress="getModel(this).editingMode$ = false"></launcher-hot-key>
         <template if="{{editingMode$}}">
-            <div id="elementSettings" class="launcher-topbar">
-                <juicy-tile-editor selectionmode watchedtagnames="['JUICY-TILE-LIST', 'JUICY-TILE-GRID']" class="max-height"></juicy-tile-editor>
-            </div>
             <div class="launcher-toolbar launcher-topbar">&nbsp;</div>
         </template>
 
@@ -88,7 +83,16 @@
                 <launcher-root-partial class="workspace {{AppName}}"></launcher-root-partial>
             </template>
         </div>
+
+        <launcher-hot-key keys="Ctrl+E" onkeypress="getModel(this).editingMode$ = !getModel(this).editingMode$"></launcher-hot-key>
+        <launcher-hot-key keys="Esc" onkeypress="getModel(this).editingMode$ = false"></launcher-hot-key>
+        <template if="{{editingMode$}}">
+            <div id="elementSettings" class="launcher-topbar">
+                <juicy-tile-editor selectionmode watchedtagnames="['JUICY-TILE-LIST', 'JUICY-TILE-GRID']" class="max-height"></juicy-tile-editor>
+            </div>
+        </template>
     </template>
+
     <puppet-client ref="root"></puppet-client>
     <starcounter-debug-aid></starcounter-debug-aid>
 
