Juicy/juicy-tile-editor@f79fef0
Juicy/juicy-tile-editor@f79fef0629e9663b07900722f40382231fa401b6

https://github.com/Juicy/juicy-tile-editor/issues/17

--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/index.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
@@ -19,7 +19,7 @@
 
   <style>
     body {
-      padding: 2em;
+      padding: 50px 20px 20px 20px;
     }
     * {
       margin:0px;
@@ -63,13 +63,12 @@
     }
 
     #aboveOverlay {
-      position: relative;
+      position: fixed;
       z-index: 100;
-      background-color: #fff;
     }
     iframe{float:right}
   </style>
-
+</head>
 <body>
 <article class="markdown-body">
     <iframe src="http://ghbtns.com/github-btn.html?user=juicy&amp;repo=juicy-tile-editor&amp;type=fork&amp;count=true&amp;size=medium"
@@ -78,13 +77,13 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
   allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></iframe>
 
 <template bind>
+    <template if="{{editingMode}}">
+        <div id="aboveOverlay">
+            <juicy-tile-editor selectionmode></juicy-tile-editor>
+        </div>
+    </template>
   <p>Press Ctrl or Command on your keyboard and move your mouse over an item to edit</p>
   <label><input type="checkbox" checked="{{editingMode}}"> Show editor ({{editingMode}})</label>
-  <template if="{{editingMode}}">
-    <div id="aboveOverlay">
-      <juicy-tile-editor selectionMode></juicy-tile-editor>
-    </div>
-  </template>
   <core-localstorage name="st1" value="{{setup}}"></core-localstorage>
   <juicy-tiles-setup-sync storedValue="{{setup}}"></juicy-tiles-setup-sync>
   <juicy-tile-list id="st1" setup="[[setup]]">
@@ -208,3 +207,4 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
 </article>
 
 </body>
+</html>
