--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-border-picker.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-border-picker.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../../polymer/polymer.html" />
-<link rel="import" href="juicy-color-picker.html" />
+<link rel="import" href="../../juicy-color-picker/src/juicy-color-picker.html" />
 
 <polymer-element name="juicy-border-picker" attributes="pallete value">
     <template>
