--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor-form.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor-form.html
@@ -1,7 +1,7 @@
 ﻿<link rel="import" href="../../polymer/polymer.html" />
 <link rel="import" href="../../core-selector/core-selector.html" />
 <link rel="import" href="../../juicy-popover/src/juicy-popover.html" />
-<link rel="import" href="juicy-color-picker.html" />
+<link rel="import" href="../../juicy-color-picker/src/juicy-color-picker.html" />
 <link rel="import" href="juicy-border-picker.html" />
 
 <polymer-element name="juicy-tile-editor-form" attributes="selectedItems editedTiles">
