Fix z-index issues
Juicy/juicy-tile-editor@969f6678714ef650b42a7b88d8215b8ab7002646
Juicy/juicy-popover@5cf477af39e9da29de7bd00676dcd28e1d18dfc8
https://github.com/Juicy/juicy-tile-editor/issues/55

--- a/src/Launcher/wwwroot/sys/juicy-popover/src/juicy-popover.html
+++ b/src/Launcher/wwwroot/sys/juicy-popover/src/juicy-popover.html
@@ -108,11 +108,17 @@
       else {
         expandable.style.left = elem.offsetLeft + "px";
       }
+
+      var e = new Event("juicy-popover-expand");
+      this.dispatchEvent(e);
     };
 
     JuicyPopoverElementPrototype.collapse = function () {
       this.shadowRoot.querySelector("#expandable").classList.remove("expanded");
       this.classList.remove("expanded");
+
+      var e = new Event("juicy-popover-collapse");
+      this.dispatchEvent(e);
     };
 
     global.JuicyPopoverElement = document.registerElement('juicy-popover', {
