Add oversize support
Juicy/juicy-tile-editor@d4e2c4f18d5f9f4d072d72800ee405232847aeb9
Juicy/juicy-tile-list@df1efd26137e877f1e78498b795fcbf764169ca6
Juicy/juicy-tile-grid@1286b5d9bbb61e8f4528fe911d09f96a6a4f3690
https://github.com/Juicy/juicy-tile-editor/issues/54

--- a/src/Launcher/wwwroot/sys/juicy-tile-grid/src/juicy-tile-grid.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-grid/src/juicy-tile-grid.html
@@ -161,6 +161,14 @@ version: 0.1.0
                                 elementStyle.backgroundColor = "";
                             }
                             elementStyle.outline = child.outline || "";
+
+                            if (oversize) {
+                                elementStyle.padding = oversize + "px";
+                                elementStyle.margin = "-" + oversize + "px";
+                            } else {
+                                elementStyle.padding = "";
+                                elementStyle.margin = "";
+                            }
                         }
 
                         if(child.items){// virtual container
