Update Launcher's `polyjuice-include` dependency to #master

--- a/src/Launcher/wwwroot/sys/polyjuice-include/polyjuice-include.html
+++ b/src/Launcher/wwwroot/sys/polyjuice-include/polyjuice-include.html
@@ -120,7 +120,7 @@ Uses juicy-tiles setup given from DB as juicyTilesSetup.
       this.innerTempl.model = model;
     };
 
-    document.registerElement('launcher-root-partial', {
+    document.registerElement('polyjuice-include', {
       prototype: LauncherPartialPrototype
     });   
   })();
