Juicy/juicy-display-router@a173f49
Juicy/juicy-display-router@a173f49c34db3a52509c1bf8c7376d97adee8354

--- a/src/Launcher/wwwroot/sys/juicy-display-router/juicy-display-router.html
+++ b/src/Launcher/wwwroot/sys/juicy-display-router/juicy-display-router.html
@@ -23,6 +23,10 @@
     };
     JuicyDisplayRoutePrototype.applyDisplaySelector = function (show) {
       var selector = this.getAttribute('display-selector');
+      if (/[.]$/gi.test(selector)) {
+          console.error("Invalid selector value [", selector, "]. Workspace is missing AppName!");
+          return;
+      }
       if (selector) {
         var elem = document.querySelector(selector);
         if (elem) {
