Juicy/juicy-tile-editor@5e5bb8e
Juicy/juicy-tile-editor@5e5bb8e8c1b875d43ec113ff8bf3d8555016f1c3
https://github.com/Polyjuice/Launcher/issues/134

--- a/src/Launcher/wwwroot/Launcher/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/LauncherTemplate.html
@@ -88,6 +88,11 @@
         <template if="{{editingMode$}}">
             <div id="elementSettings" class="launcher-topbar">
                 <juicy-tile-editor selectionmode watchedtagnames="['JUICY-TILE-LIST', 'JUICY-TILE-GRID']" class="max-height"></juicy-tile-editor>
+                <script>
+                    document.querySelector("juicy-tile-editor").addEventListener("juicy-tile-editor-close", function (e) {
+                        getModel(e.target).editingMode$ = false;
+                    });
+                </script>
             </div>
         </template>
     </template>
