--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
@@ -187,7 +187,8 @@
                               tilelists="{{tileLists}}"
                               on-juicy-tile-editor-revert="{{revertAction}}"
                               on-juicy-tile-editor-form-tree-changed="{{treeChangedAction}}"
-                              on-juicy-tile-editor-clear="{{clearAction}}"></juicy-tile-editor-form>
+                              on-juicy-tile-editor-clear="{{clearAction}}"
+                              on-juicy-tile-editor-form-close="{{closeClick}}"></juicy-tile-editor-form>
       
     <juicy-draggable elementid="sidebar" handleid="sidebarHeader" position="fixed" id="sidebarDrag">
         <juicy-resizable righthandle=".resize-right" lefthandle=".resize-left" id="sidebarResize">
