Juicy/juicy-tile-editor@f421ae
Juicy/juicy-tile-editor@f421ae30e8f47dd73da45be14fb60f94a7f9aa6e
https://github.com/Polyjuice/Launcher/issues/134

--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/index.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/index.html
@@ -81,6 +81,11 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
         <div id="aboveOverlay">
             <juicy-tile-editor selectionmode></juicy-tile-editor>
         </div>
+        <script>
+            document.querySelector("juicy-tile-editor").addEventListener("juicy-tile-editor-close", function (e) {
+                getModel(e.target).editingMode = false;
+            });
+        </script>
     </template>
   <p>Press Ctrl or Command on your keyboard and move your mouse over an item to edit</p>
   <label><input type="checkbox" checked="{{editingMode}}"> Show editor ({{editingMode}})</label>
