Launcher should use it's own information about appName, not rely on Starcounter's JSON serializer (fixes 2. from https://github.com/Polyjuice/GoogleSignIn/issues/6#issuecomment-103860894)

--- a/src/Launcher/wwwroot/Launcher/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/LauncherTemplate.html
@@ -78,8 +78,8 @@
             <!-- Workspaces -->
             <template repeat="{{ workspaces }}">
                 <!-- - workspace -->
-                <juicy-display-route match-path="^\/{{AppName}}" display-selector=".workspace.{{AppName}}"></juicy-display-route>
-                <polyjuice-include class="workspace {{AppName}}" partial="{{}}"></polyjuice-include>
+                <juicy-display-route match-path="^\/{{Launcher.appName}}" display-selector=".workspace.{{Launcher.appName}}"></juicy-display-route>
+                <polyjuice-include class="workspace {{Launcher.appName}}" partial="{{}}"></polyjuice-include>
             </template>
         </div>
 
